# com.nfysoft.gamecubecontroller

./: .gitignore  CHANGELOG.md  LICENSE  README.md  package.json
Plugin-source/: CMakeLists.txt
Plugin-source/src/: export_header.h  gcc_adapter.cpp  gcc_adapter.h  gcc_error.h
Runtime/: GamecubeControllerAdapter.cs  GamecubeControllerDevice.cs  GamecubeControllerState.cs  LibUsbError.cs  Nfysoft.GamecubeController.asmdef  PluginCalls.cs  PluginFeedback.cs
